--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "@vercel/blob": "^0.27.0",
     "crypto": "^1.0.1",
     "framer-motion": "^11.15.0",
